fixed alignment of headshot

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ body{
   height: 24%;
   width: 48%;
   top: 0;
-  right: 0;
+  right: 11px;
 }
 
 
